# secure-erp-cpp

./: .gitignore  CMakeLists.txt  main.cpp
DAO/: CRMDAO.cpp  CRMDAO.h  HRDAO.cpp  HRDAO.h  SalesDAO.cpp  SalesDAO.h
controller/: CRMController.cpp  CRMController.h  HRController.cpp  HRController.h  MainController.cpp  MainController.h  SalesController.cpp  SalesController.h
model/: CRMModel.hpp  HRModel.hpp  SalesModel.hpp
ui/: TerminalView.cpp  TerminalView.h
util/: Util.cpp  Util.h
